--- a/chemplot/MolCLR/config.yaml
+++ b/chemplot/MolCLR/config.yaml
@@ -1,5 +1,5 @@
 batch_size: 1                  # batch size
-fine_tune_from: '3.molclr/MolCLR/ckpt/pretrained_gin/checkpoints/model.pth'  # sub directory of pre-trained model in ./ckpt
+fine_tune_from: './ckpt/pretrained_gin/checkpoints/model.pth'  # sub directory of pre-trained model in ./ckpt
 gpu: cuda:0                     # training GPU
 
 model_type: gin                 # GNN backbone (i.e., gin/gcn)
@@ -7,6 +7,7 @@ model:
   num_layer: 5                  # number of graph conv layers
   emb_dim: 300                  # embedding dimension in graph conv layers
   feat_dim: 512                 # output feature dimention
+  drop_ratio: 0
   pool: mean                    # readout pooling (i.e., mean/max/add)
 
 dataset:
